--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+djangorestframework>=3.13
+boto3>=1.28
+django-cors-headers>=3.13
 click==8.1.8
 colorama==0.4.6
 comm==0.2.2
